--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.2.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.codenation</groupId>
 	<artifactId>central-de-erros</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -44,6 +45,15 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>5.2.6.RELEASE</version>
 		</dependency>
 	</dependencies>
 
