--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#SERVER
+server.port=8090
 
+#SQL
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/teste?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driverClassName=org.postgresql.Driver
